--- a/_locales/zh/microbit_extend-string.json
+++ b/_locales/zh/microbit_extend-string.json
@@ -1,3 +1,3 @@
 {
-	"microbit_extend.ping|block": "发送端口|%trig|接收端口|%echo|返回|%unit"
+	"microbit_extend.sonar_ping|block": "发送端口|%trig|接收端口|%echo|返回|%unit"
 }
